tests/issues-OLD/test289.expected
Error: syntax error, parens needed around operator ':-', /home/andrew/trealla/tests/issues-OLD/test289.pl:2
